[package]
name = "dkg"
description = "Pedersen's Distributed Key Generation"
version.workspace = true
edition.workspace = true

[dependencies]
sss = { workspace = true }
vss = { workspace = true }
bls12_381 = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
