[package]
name = "vss"
description = "Feldman's Verifiable Secret Sharing"
version.workspace = true
edition.workspace = true

[dependencies]
sss = { workspace = true }
bls12_381 = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
